--- a/templates/home.html
+++ b/templates/home.html
@@ -10,11 +10,15 @@
     <center>
       <h1>MSP Portfolio</h1>
       <img src="http://127.0.0.1:5000/static/banner.jpg" width="100%" height="175" />
-      <center/>
-      <h2>About Moses<h2/>
-      <p>
-        Lorem ipsum dolor sit amet. Qui sunt odit quo nobis ducimus et consequatur unde non nesciunt blanditiis cum architecto necessitatibus. 
-        Non quaerat voluptas et ratione excepturi in recusandae fugit eum deleniti voluptate aut minus ratione!
-      <p/>
+    <center/>
+    <h2>About Moses<h2/>
+    <p>
+      Lorem ipsum dolor sit amet. Et aliquam voluptatem et enim accusantium est iure porro est odit quia.
+      33 consequatur reprehenderit eos optio animi aut nihil sapiente aut magni magnam.
+      In dolorem consectetur non magni velit sit laborum autem At dolores eaque.
+    <p/>
+    <h2>Projects<h2/>
+    <p>TODO - show projects here<p/>
+    <button>Contacts<button/>
   </body>
 </html>
