--- a/templates/home.html
+++ b/templates/home.html
@@ -5,20 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MSP Portfolio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+    <style>
+      #banner {
+        height: 360px;
+        object-fit: cover;
+        width: 100%
+      }
+
+    </style>
   </head>
   <body>
-    <center>
-      <h1>MSP Portfolio</h1>
-      <img src="http://127.0.0.1:5000/static/banner.jpg" width="100%" height="175" />
-    <center/>
-    <h2>About Moses<h2/>
-    <p>
-      Lorem ipsum dolor sit amet. Et aliquam voluptatem et enim accusantium est iure porro est odit quia.
-      33 consequatur reprehenderit eos optio animi aut nihil sapiente aut magni magnam.
-      In dolorem consectetur non magni velit sit laborum autem At dolores eaque.
-    <p/>
-    <h2>Projects<h2/>
-    <p>TODO - show projects here<p/>
-    <button>Contacts<button/>
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">MSP Portfolio</h1>
+      <img class="img-fluid" id="banner" src="http://127.0.0.1:5000/static/banner.jpg" />
+      <h2 class="text-center">About Moses</h2>
+      <p class="lead">
+        Lorem ipsum dolor sit amet. Et aliquam voluptatem et enim accusantium
+        est iure porro est odit quia. 33 consequatur reprehenderit eos optio
+        animi aut nihil sapiente aut magni magnam. In dolorem consectetur non
+        magni velit sit laborum autem At dolores eaque.
+      </p>
+      <h2 class="text-center mt-2 mb-4">Projects</h2>
+      <div>
+        {% for proj in projs %}
+          {% include "projs.html" %}
+        {% endfor %}
+      </div>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Contacts Us</button>
+      </div>
+    </div>
   </body>
 </html>
