--- a/templates/projs.html
+++ b/templates/projs.html
@@ -3,7 +3,7 @@
     <h4 style="color: rgb(120, 120, 120); margin-bottom: 4px">
       {{proj['title']}}
     </h4>
-    <div><b>Description:</b>{{proj['Description']}}</div>
+    <div><b>Description: </b>{{proj['description']}}</div>
   </div>
   <div class="col-2">
     <button type="button" class="btn btn-outline-primary">Open</button>
